hphp/hack/test/typecheck/expression_trees/pipe_lambda1.php.exp
ERROR: File "pipe_lambda1.php", line 21, characters 49-50:
Cannot use unstable feature: `capture_pipe_variables` (Parsing[1002])
